src/objects/echosign_dev1__Chatter_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>echosign_dev1__Account_Record_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Post Chatter updates for Adobe Sign agreements on the related Account record.</description>
        <inlineHelpText>Post Chatter updates for EchoSign agreements on the related Account record.</inlineHelpText>
        <label>Post on Account Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Agreement_Cancelled_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Post Chatter update when agreement is canceled.</description>
        <inlineHelpText>Post Chatter update when agreement is cancelled.</inlineHelpText>
        <label>Post when Agreement Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Agreement_Declined_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Post Chatter update when agreement is declined.</description>
        <inlineHelpText>Post Chatter update when agreement is declined.</inlineHelpText>
        <label>Post when Agreement Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Agreement_Expired_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Post Chatter update when agreement expires.</description>
        <inlineHelpText>Post Chatter update when agreement expires.</inlineHelpText>
        <label>Post when Agreement Expires</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Agreement_Record_Post__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Post Chatter updates for Adobe Sign agreements on the Agreement record.</description>
        <inlineHelpText>Post Chatter updates for EchoSign agreements on the Agreement record.</inlineHelpText>
        <label>Post on Agreement Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Agreement_Reminder_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Post Chatter update when reminders are sent.</description>
        <inlineHelpText>Post Chatter update when reminders are sent.</inlineHelpText>
        <label>Post when Reminders Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Agreement_Sent_Post__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Post Chatter update when agreement is sent for signature/approval/acceptance/ form-filling/delivery.</description>
        <inlineHelpText>Post Chatter update when agreement is sent.</inlineHelpText>
        <label>Post when Agreement Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Agreement_Sign_Message__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Post private Chatter message to signer when an agreement needs the signer&apos;s signature.</description>
        <inlineHelpText>Post private Chatter message to signer when an agreement needs the signer&apos;s signature.</inlineHelpText>
        <label>Send Notifications to Sign Agreements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Agreement_Signed_Post__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Post Chatter update when agreement is signed/approved/accepted/form-filled/delivered.</description>
        <inlineHelpText>Post Chatter update when agreement is signed and approved.</inlineHelpText>
        <label>Post when Agreement transaction done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Agreement_Viewed_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Post Chatter update when agreement is viewed.</description>
        <inlineHelpText>Post Chatter update when agreement is viewed.</inlineHelpText>
        <label>Post when Agreement Viewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Contract_Record_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Post Chatter updates for Adobe Sign agreements on the related Contract record.</description>
        <inlineHelpText>Post Chatter updates for EchoSign agreements on the related Contract record.</inlineHelpText>
        <label>Post on Contract Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Chatter_Integration__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this setting to turn on Chatter updates for Adobe Sign agreements.</description>
        <inlineHelpText>Enable this setting to turn on Chatter updates for EchoSign agreements.</inlineHelpText>
        <label>Enable Adobe Sign Chatter Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Opportunity_Record_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Post Chatter updates for Adobe Sign agreements on the related Opportunity record.</description>
        <inlineHelpText>Post Chatter updates for EchoSign agreements on the related Opportunity record.</inlineHelpText>
        <label>Post on Opportunity Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Email_Bounced_Post__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Post Chatter update when recipient email bounces and is not delivered.</description>
        <inlineHelpText>Post Chatter update when recipient email bounces and is not delivered.</inlineHelpText>
        <label>Post when Recipient Email Bounces</label>
        <type>Checkbox</type>
    </fields>
    <label>Adobe Sign Chatter Settings</label>
</CustomObject>